--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="ocean_green_app">#2EBFA5</color>
+    <color name="purple_base_app">#4E4187</color>
+    <color name="transparent">#00FFFFFF</color>
+
 </resources>
