--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,5 +18,9 @@
         android:id="@+id/homeFragment"
         android:name="com.julio.vamoDaleSportingEvents.fragments.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_home_to_login_screen"
+            app:destination="@id/loginFragment" />
+    </fragment>
 </navigation>
